refactor(ui): enhance favicon with background and external link

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Studio Six">
 
     <!-- Favicon -->
-    <link rel="icon" href="data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ctext x='5' y='85' font-family='Bebas Neue, sans-serif' font-size='100' fill='%23111111'%3ES%3C/text%3E%3Ctext x='50' y='85' font-family='Bebas Neue, sans-serif' font-size='100' fill='transparent' stroke='%23111111' stroke-width='3'%3E6%3C/text%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg" href="assets/images/favicon/studio-six-favicon-s6-bg-light-theme.svg">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
