refactor(html): sync index.html with final content and UI elements
This commit updates the main HTML file to incorporate final assets and align with the latest CSS/JS enhancements.

- **UI Integration:** Added the theme toggle button markup to the header and applied the new .btn-secondary class to the 'About' section CTA for improved contrast.

- **Content Population:** Replaced all image placeholders across the Home, Projects, and About pages with the final visual assets.

- **Copywriting Update:** Standardized the term 'estúdio-boutique' to 'estúdio' throughout the site for brand consistency.

--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
                     <h2 class="font-titulo font-bold text-3xl sm:text-4xl tracking-tight leading-tight">O nosso estúdio é uma parceria de verdade.</h2>
                     <p class="mt-6 text-base sm:text-lg opacity-90">Somos um estúdio liderado por [Seu Nome], focado em qualidade, não em quantidade. Acreditamos que a melhor forma de trabalhar é lado a lado com os nossos parceiros, com transparência e uma paixão partilhada por criar algo de extraordinário.</p>
                     <div class="mt-8">
-                        <a href="#about" class="btn bg-background text-primary hover:bg-surface nav-link" data-page="about">
+                        <a href="#about" class="btn btn-secondary nav-link" data-page="about">
                             Conhecer a nossa história
                         </a>
                     </div>
